apps/support/wiki-js/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-js
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wiki.support4u.se
      secretName: wiki-support4u-se-tls
  rules:
    - host: wiki.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki-js
                port:
                  number: 80
